<resources>
    <string name="app_name">Navigation Component App</string>

    <!--    Start Fragment-->
    <string name="start_action_bar_title">Start</string>
    <string name="start_button_text_next">Next</string>

    <!--    Profile Fragment-->
    <string name="profile_action_bar_title">Profile</string>
    <string name="profile_text_username">Welcome, %1$s</string>

    <!--    Login Fragment-->
    <string name="login_action_bar_title">Login</string>
    <string name="login_input_error_invalid_username">Usuário inválido</string>
    <string name="login_input_error_invalid_password">Senha inválida</string>

    <!--    Profile Data-->
    <string name="profile_data_action_bar_title">Profile Data</string>
    <string name="profile_data_input_hint_name">Nome</string>
    <string name="profile_data_input_hint_bio">Bio</string>
    <string name="profile_data_input_invalid_error_name">Nome inválido</string>
    <string name="profile_data_input_invalid_error_bio">Bio inválida</string>
    <string name="profile_data_text_button_next">Next</string>

    <!--    Choose Credentials -->
    <string name="choose_credentials_action_bar_title">Choose Credentials</string>
    <string name="choose_credentials_input_hint_username">Nome</string>
    <string name="choose_credentials_input_hint_password">Password</string>
    <string name="choose_credentials_input_error_invalid_username">Nome inválido</string>
    <string name="choose_credentials_input_error_invalid_password">Senha inválida</string>
    <string name="choose_credentials_text_name">%1$s, choose your credentials</string>
    <string name="choose_credentials_button_finish">Finalizar</string>

</resources>