<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.registration.profile.ProfileDataFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="32dp">

            <EditText
                android:id="@+id/edt_profile_data_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_data_input_hint_name"/>

            <EditText
                android:id="@+id/edt_profile_data_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/profile_data_input_hint_bio"/>

            <Button
                android:id="@+id/btn_profile_data_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/profile_data_text_button_next"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>